// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search.View should render a snapshot 1`] = `
.c6 {
  width: 100%;
  border-style: none;
  color: #24292f;
  background-color: #ffffff;
}

.c6::-webkit-input-placeholder {
  color: #6e7781;
}

.c6::-moz-placeholder {
  color: #6e7781;
}

.c6:-ms-input-placeholder {
  color: #6e7781;
}

.c6::placeholder {
  color: #6e7781;
}

.c6:disabled {
  color: #57606a;
  background-color: #f6f8fa;
}

.c6:focus {
  outline: none;
}

.c3 {
  position: relative;
}

.c3 {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  padding: 0 8px;
  border-radius: 4px;
  width: 100%;
  height: 48px;
}

.c3:disabled {
  color: #57606a !important;
  background-color: #f6f8fa !important;
}

.c3 > .c5 {
  padding: 0 8px 0 8px;
  color: inherit;
  background-color: inherit;
  line-height: 40px;
  font-weight: 500;
}

.c4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 8px;
}

.c4 {
  border-style: none;
  border-radius: 10px;
  height: 40px;
}

.c4 {
  color: #24292f;
  background-color: inherit;
}

.c4:disabled {
  cursor: default;
}

.c4:disabled > svg {
  cursor: default;
  color: #57606a;
}

.c4 > svg {
  width: 16px;
  height: 16px;
}

.c4:enabled > svg:hover {
  color: #0969da;
}

.c0 {
  position: relative;
}

.c1 {
  display: grid;
  gap: 0;
}

.c1:focus-within > .search--input > div {
  border-radius: 0;
  border-bottom: 1px solid #d0d7de;
  box-shadow: none !important;
}

.c1:focus-within > .search--dropdown > ul {
  border-radius: 0 0 4px 4px;
  box-shadow: 0 3px 6px -6px rgba(140,149,159,0.15) !important;
}

.c2 button {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.c2 > div {
  border-radius: 0 0 4px 4px;
}

@media (min-width:544px) {
  .c1 {
    gap: 16px 0;
  }

  .c1 .search--input {
    border-radius: 4px;
  }
}

@media (min-width:544px) {
  .c1:focus-within > .search--input > div {
    border-radius: 4px;
    border-bottom: none;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c1:focus-within > .search--dropdown > ul {
    border-radius: 4px;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c2 > div {
    border-radius: 4px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 search--input"
    >
      <div
        class="c3"
      >
        <button
          class="c4"
        >
          <svg
            aria-label="input-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
        </button>
        <input
          aria-disabled="false"
          aria-label="Search Autocomplete"
          aria-readonly="false"
          autocomplete="off"
          class="c5 c6 input--empty"
          placeholder="Search the world..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search.View should render with changed locale 1`] = `
.c6 {
  width: 100%;
  border-style: none;
  color: #24292f;
  background-color: #ffffff;
}

.c6::-webkit-input-placeholder {
  color: #6e7781;
}

.c6::-moz-placeholder {
  color: #6e7781;
}

.c6:-ms-input-placeholder {
  color: #6e7781;
}

.c6::placeholder {
  color: #6e7781;
}

.c6:disabled {
  color: #57606a;
  background-color: #f6f8fa;
}

.c6:focus {
  outline: none;
}

.c3 {
  position: relative;
}

.c3 {
  background-color: #ffffff !important;
  box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  padding: 0 8px;
  border-radius: 4px;
  width: 100%;
  height: 48px;
}

.c3:disabled {
  color: #57606a !important;
  background-color: #f6f8fa !important;
}

.c3 > .c5 {
  padding: 0 8px 0 8px;
  color: inherit;
  background-color: inherit;
  line-height: 40px;
  font-weight: 500;
}

.c4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 8px;
}

.c4 {
  border-style: none;
  border-radius: 10px;
  height: 40px;
}

.c4 {
  color: #24292f;
  background-color: inherit;
}

.c4:disabled {
  cursor: default;
}

.c4:disabled > svg {
  cursor: default;
  color: #57606a;
}

.c4 > svg {
  width: 16px;
  height: 16px;
}

.c4:enabled > svg:hover {
  color: #0969da;
}

.c0 {
  position: relative;
}

.c1 {
  display: grid;
  gap: 0;
}

.c1:focus-within > .search--input > div {
  border-radius: 0;
  border-bottom: 1px solid #d0d7de;
  box-shadow: none !important;
}

.c1:focus-within > .search--dropdown > ul {
  border-radius: 0 0 4px 4px;
  box-shadow: 0 3px 6px -6px rgba(140,149,159,0.15) !important;
}

.c2 button {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.c2 > div {
  border-radius: 0 0 4px 4px;
}

@media (min-width:544px) {
  .c1 {
    gap: 16px 0;
  }

  .c1 .search--input {
    border-radius: 4px;
  }
}

@media (min-width:544px) {
  .c1:focus-within > .search--input > div {
    border-radius: 4px;
    border-bottom: none;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c1:focus-within > .search--dropdown > ul {
    border-radius: 4px;
    box-shadow: 0 3px 6px rgba(140,149,159,0.15) !important;
  }
}

@media (min-width:544px) {
  .c2 > div {
    border-radius: 4px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 search--input"
    >
      <div
        class="c3"
      >
        <button
          class="c4"
        >
          <svg
            aria-label="input-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
        </button>
        <input
          aria-disabled="false"
          aria-label="Recherch Remplissage automatique"
          aria-readonly="false"
          autocomplete="off"
          class="c5 c6 input--empty"
          placeholder="Cherchez le monde..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
